﻿0.7
. SPA with OData + AngularJS + Breeze.js + toastr.js
. Database - Sector table Id field switched to smallint from byte
. Solution - Refactoring tt files

0.6.3
. Web - Overview text update

0.6.2
. Web - Overview text update

0.6.1
. BusinessObjects - Required attribute for Dto classes

0.6
. Facade - UnitOfWork finetuning
. General - Password for User table + basic authentication
. Web - Controller.tt was created

0.5
. SolutionItems - Local_UpdateDatabase.sql was updated to remove doktrosizlar db items
. Business + DataObjects
.. To support tables with multiple primary key, IEntity interface Id property was replaced with IsNew
. Web - Controllers finetuning

0.4.2.2
. General - Missing files were restored - attempt #2

0.4.2.1
. General - Missing files were restored

0.4.2
. General - github repo merge

0.4.1
. General - Release Notes.txt was updated

0.4
. DataObjects
.. Utility.ttinclude: Common code blocks from t4 files were moved to this file
.. Repositories were updated
. BusinessObjects
.. Metadata.t4 was moved under "Generated" folder and was modified to generated the files for once.
. Facade
.. UnitOfWork classes were created for each entity
. Web
.. Repositories + UnitOfWork updates
. General
.. config files connectionstrings were updated
.. github repository reset

0.3
. BusinessObjects
.. OrganizationGroupType was renamed to UserResourcePoolType
.. UserDistributionIndexRatingAverage class was merged into UserResourcePool
.. BusinessObjectsDto.t4 was add to be able create Dto classes
.. OrganizationGroupType was renamed to UserResourcePoolType
. Web
.. Number of ratings info was added to CMRP views
.. Create / Edit operations were modified to use Dto classes
. Database + General
.. UserResourcePool table ResourcePoolRate field percentage update - values were divided to 100

0.2
. Database + General
.. ResourcePool + ResourcePoolOrganization + UserResourcePool + UserResourcePoolOrganization tables were added