@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Breeze.EdmBuilder" version="1.0.4" targetFramework="net45" />
+  <package id="Breeze.EdmBuilder" version="1.0.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net45" />
 </packages>
