@@ -1,6 +1,6 @@
 ﻿/*
  * CSS to accompany the breeze.directives
- * such as breeze.directives.validation.js
+ * such as breeze.directives.js
  *
  * v.1.3
  *
