@@ -86,12 +86,12 @@
         <compilation debug="true" targetFramework="4.5" />
         <httpRuntime targetFramework="4.5" />
     </system.web>
-    <system.webServer>
-        <handlers>
-            <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-            <remove name="OPTIONSVerbHandler" />
-            <remove name="TRACEVerbHandler" />
-            <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-        </handlers>
-    </system.webServer>
-</configuration>
+    
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
